--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,58 +1,79 @@
 #center-head {
-justify-content: center !important;
-}
-
-#height-500 {
-  height: 500px;
-}
-
-#header-Id {
-  width: 100%;
-}
-
-#news-Id {
-  padding-right: 0;
-  padding-left: 0;
-  border-left: 2px !important;
-  border-color: black;
-}
-
-#news-box {
-  height: 600px;
-  border-top: 20px;
-  border-bottom: 20px;
-}
-
-#news-hr {
-  margin: 0.5rem;
-}
-
-#map-Id {
-  padding-right: 0;
-  padding-left: 0;
-  border-right: 2px !important;
-  border-color: black;
-}
-
-#mapLeft {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-#news-box {
-  text-align: left;
-  padding-right: 1rem;
-  overflow-y: auto;
-}
-
-#map { 
+  justify-content: center !important;
+  }
   
-  width:93%; height:480px;
-  margin-top: 2rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-#myChart {
-  width: 95%;  
-}
+  #height-500 {
+    height: 500px;
+  }
+  
+  #header-Id {
+    width: 100%;
+  }
+  
+  #news-Id {
+    padding-right: 0;
+    padding-left: 0;
+    border-left: 5px !important;
+    border-color: black;
+  }
+  
+  #news-box {
+    height: 515px;
+    border-top: 20px;
+    border-bottom: 20px;
+  }
+  
+  #news-hr {
+    margin: 0.5rem;
+  }
+  
+  #map-Id {
+    padding-right: 10px;
+    padding-left: 0;
+    border-right: 2px !important;
+    border-color: black;
+  }
+  
+  #news-box {
+    text-align: left;
+    padding-right: 1rem;
+    overflow-y: auto;
+  }
+  
+  #map { 
+    width: 95%; height:500px;
+    margin: 24px 0px 12px 12px;
+    padding: 0;
+    border-right: 2px !important;
+    border-color: black;
+    position:relative;
+    z-index:0;
+  }
+  
+  #myChart {
+    width: 90%;
+    position: absolute;
+    padding-right: 15px;
+    left: 15px;
+    top: 225px;
+    z-index:1;
+    background: #FFF;
+    opacity: .9;
+    display: none;
+  }
+  
+  .footer {
+    padding: 10px !important;
+  }
+  
+  #about {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  
+  hr { 
+    height: 1px;
+    color: darkslategrey;
+    background-color: darkslategrey;
+    border: none;
+  }
