--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,46 +1,64 @@
 #center-head {
   justify-content: center !important;
-  }
+}
   
-  #height-500 {
+#height-500 {
     height: 500px;
-  }
+}
   
-  #header-Id {
+#header-Id {
     width: 100%;
-  }
+}
   
-  #news-Id {
+.hero {
+  border: 10px !important;
+  border-color:rgba(156, 2, 2, 0.596) !important;
+}
+
+.hero-body {
+  padding: 12px;  
+}
+
+#news-Id {
     padding-right: 0;
     padding-left: 0;
     border-left: 5px !important;
     border-color: black;
-  }
+}
   
-  #news-box {
+#news-box {
     height: 515px;
     border-top: 20px;
     border-bottom: 20px;
-  }
+}
   
-  #news-hr {
+#news-hr {
     margin: 0.5rem;
-  }
+}
   
-  #map-Id {
+#map-Id {
     padding-right: 10px;
     padding-left: 0;
     border-right: 2px !important;
     border-color: black;
-  }
+}
   
-  #news-box {
+#news-box {
+    margin-top: 25px;
     text-align: left;
     padding-right: 1rem;
     overflow-y: auto;
-  }
-  
-  #map { 
+}
+
+#card-content {
+  margin-bottom: 20px;
+}
+
+.card {
+  margin: 0px 0px 15px;
+}
+
+#map { 
     width: 95%; height:500px;
     margin: 24px 0px 12px 12px;
     padding: 0;
@@ -48,9 +66,9 @@
     border-color: black;
     position:relative;
     z-index:0;
-  }
+}
   
-  #myChart {
+#myChart {
     width: 90%;
     position: absolute;
     padding-right: 15px;
@@ -60,20 +78,20 @@
     background: #FFF;
     opacity: .9;
     display: none;
-  }
+}
   
-  .footer {
+.footer {
     padding: 10px !important;
-  }
+}
   
-  #about {
+#about {
     padding-top: 10px;
     padding-bottom: 10px;
-  }
+}
   
-  hr { 
+hr { 
     height: 1px;
     color: darkslategrey;
     background-color: darkslategrey;
     border: none;
-  }
+}
